# exotica_solver_template

./: CMakeLists.txt  exotica_plugins.xml  package.xml
include/exotica_solver_template/: solver_template.h
init/: template_solver.in
src/: template_solver.cpp
